# 2024-YSOSv2

./: Cargo.toml  Makefile  ysos.py
pkg/app/brk/: Cargo.toml
pkg/app/brk/src/: main.rs
pkg/app/counter/: Cargo.toml
pkg/app/counter/src/: main.rs
pkg/app/dinner/: Cargo.toml
pkg/app/dinner/src/: main.rs
pkg/app/factorial/: Cargo.toml
pkg/app/factorial/src/: main.rs
pkg/app/fish/: Cargo.toml
pkg/app/fish/src/: main.rs
pkg/app/fork_test/: Cargo.toml
pkg/app/fork_test/src/: main.rs
pkg/app/heap_alloc/: Cargo.toml
pkg/app/heap_alloc/src/: main.rs
pkg/app/hello/src/: main.rs
pkg/app/mq/: Cargo.toml
pkg/app/mq/src/: main.rs
pkg/app/shell/: Cargo.toml
pkg/app/shell/src/: help.rs  main.rs  proc.rs
pkg/app/yield_sched/: Cargo.toml
pkg/app/yield_sched/src/: main.rs
pkg/boot/: Cargo.toml
pkg/boot/src/: config.rs  fs.rs  lib.rs  main.rs
pkg/elf/: Cargo.toml
pkg/elf/src/: lib.rs
pkg/exercise/: Cargo.toml
pkg/exercise/src/: main.rs  test.rs
pkg/kernel/: Cargo.toml
pkg/kernel/.cargo/: config.toml
pkg/kernel/config/: boot.conf
pkg/kernel/src/: lib.rs  main.rs
pkg/kernel/src/drivers/: input.rs  serial.rs  uart16550.rs
pkg/kernel/src/interrupt/: clock.rs  exceptions.rs  mod.rs  serial.rs
pkg/kernel/src/memory/: allocator.rs  frames.rs  gdt.rs  mod.rs  user.rs
pkg/kernel/src/proc/: context.rs  data.rs  manager.rs  mod.rs  paging.rs  pid.rs  process.rs  sync.rs
pkg/kernel/src/syscall/: mod.rs  service.rs
pkg/lib/: Cargo.toml
pkg/lib/src/: io.rs  lib.rs  macros.rs  sync.rs  syscall.rs
pkg/syscall/src/: lib.rs  macros.rs
(+13 files in other folders)
