[package]
name = "yslib"
version = "0.7.0"
edition = "2021"

[dependencies]
syscall_def = { package = "ysos_syscall", path = "../syscall" }
chrono = { version = "0.4", default-features = false }
linked_list_allocator = { version = "0.10", optional = true }
x86_64 = "0.15"


[features]
default = ["brk_alloc"]
kernel_alloc = []
brk_alloc = ["dep:linked_list_allocator"]
